<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pbell.offline.ole.org.pbell.MainActivity" >
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_syncserverUrl"
        android:title="@string/action_syncUrl"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_syncNow"
        android:title="@string/action_syncNow"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
    android:title="@string/action_about"
    android:orderInCategory="400"
    app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>
