<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners_all">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtSettings"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:typeface="serif"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/ole_black_blue"
                android:paddingBottom="5dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:weightSum="7"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="4"
                android:layout_weight="5">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corners_black_blue">

                    <TextView
                        android:text="@string/single_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:textColor="@color/ole_white"
                        android:textAlignment="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp" />

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleBtn_Single"
                        android:textOff="@string/single_down_json_dis"
                        android:textOn="@string/single_down_file_streaming" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corners_black_blue">

                    <TextView
                        android:text="@string/multi_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15"
                        android:textColor="@color/ole_white"
                        android:textAlignment="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp" />

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toggleBtn_Multiple"
                        android:textOff="@string/single_down_json_dis"
                        android:textOn="@string/single_down_file_streaming"
                        android:background="@drawable/rounded_corners_all" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="right"
                android:layout_marginTop="5dp"
                android:weightSum="5"
                android:layout_weight="2">

                <Button
                    android:text="@string/check_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCheck4Updates" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
