<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pbell.offline.ole.org.pbell.SyncDevice"
    tools:showIn="@layout/activity_sync_device">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sync_Headen"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/syncURL_label"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Large Text"
                android:id="@+id/lblSyncSyncUrl"
                android:textStyle="italic"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sync_LastSyncDate"
                android:id="@+id/textView5"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="22/08/2016"
                android:id="@+id/lblLastDateSync"
                android:textStyle="italic"
                android:layout_alignTop="@+id/lblSyncSyncUrl"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_EraseOldData"
                android:id="@+id/swWipeClean"
                android:layout_below="@+id/lblLastDateSync"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/sync_NowPull"
                    android:id="@+id/btnstartSyncPull"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="2" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/sync_NowPush"
                    android:id="@+id/btnstartSyncPush"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/sync_Resources"
                    android:id="@+id/btnsyncResources"
                    android:layout_weight="2" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/txtLogConsole"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scrollbars="vertical"
                android:background="#000000"
                android:textColor="#ffffff" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
