<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fst_welcome"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:typeface="serif"
                android:textStyle="bold"
                android:textAlignment="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:id="@+id/btnCloseDialog"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:textAlignment="center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fst_instruction"
                android:id="@+id/textView6"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fst_syncurl"
                    android:id="@+id/lblSyncURL"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/bb_tabletRightBorderDark" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNewSyncURL"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/background_material_dark"
                    android:inputType="textUri"
                    android:hint="http:// [server address] : [port]" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fst_proceed"
                    android:id="@+id/btnNewSaveSyncURL"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>