<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:layout_weight="4"
        android:gravity="center"
        android:background="@drawable/rounded_corners_all"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="top"
            android:layout_gravity="top">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fst_welcome"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:typeface="serif"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/ole_black_blue" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:weightSum="10">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fst_instruction"
                android:id="@+id/textView6"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_weight="3"
                android:textColor="@color/ole_black_blue" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:background="@drawable/rounded_corners_white"
                android:weightSum="4"
                android:elevation="0dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/txtNewSyncURL"
                    android:layout_gravity="center"
                    android:textColor="@color/background_material_dark"
                    android:inputType="textUri"
                    android:hint="http:// [server address] : [port]"
                    android:textColorHighlight="@color/ole_black_blue"
                    android:layout_weight="3.5"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnTestCnnection"
                        android:background="@drawable/rounded_corners_blue_btn"
                        android:text="@string/title_activity_test"
                        android:textColor="@color/ole_white"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp" />  />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2">

                <CheckBox
                    android:text="@string/sync_EraseOldData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/chWipeClean"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/ole_black_blue" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="5"
                android:gravity="bottom|center">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fst_proceed"
                    android:id="@+id/btnNewSaveSyncURL"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corners_green_btn"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/ole_white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
